force-app/main/default/objects/CRMforNonProfit__George_Notifications__c/CRMforNonProfit__George_Notifications__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>George Notifications</label>
</CustomObject>