force-app/main/default/objects/CRMforNonProfit__George_Notifications__c/fields/CRMforNonProfit__Account_Id__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Account_Id__c</fullName>
    <label>Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>