force-app/main/default/objects/CRMforNonProfit__George_Notifications__c/fields/CRMforNonProfit__Notification_URL__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Notification_URL__c</fullName>
    <label>Notification URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>